--- a/app/assets/stylesheets/site/modules/m-user-function-form.scss
+++ b/app/assets/stylesheets/site/modules/m-user-function-form.scss
@@ -8,12 +8,13 @@
   display:table;
   width:100%;
   height:100%;
-  min-height:800px;
+  min-height:740px;
 }
 
 .m-user-function-form .inner {
   display:table-cell;
   vertical-align: middle;
+  padding: 80px 0 60px;
 }
 
 .m-user-function-form .form {
